# module_2

./: .gitignore  ARCHITECTURE_DECISION_NO_VPC.md  BUG_FIX_CONFIDENCE_THRESHOLD.md  CLAUDE_FIRST_ARCHITECTURE.md  Cargo.toml  DATA_TYPE_MIGRATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_FIX_NOW.md  FIX_SUMMARY.md  ML_INTEGRATION_STRATEGY.md  RDS_CONNECTIVITY_FIX.md  RDS_FIX_ALTERNATIVE.md  README.md  REVIEW_PIPELINE_SPECIFICATION.md  add_ml_status_column.sql  check_pdf_status.sql  database_migration.sql  env.example  init.json  notes.txt  pdf_validation_queries.md  rollback_migration.sql
.github/: terraform.yml
.github/workflows/: build_lambdas.yml  deploy_site.yml  generate_pdf.yml  terraform.yml  terraform_destroy_rds.yml  terraform_migrate_security_groups.yml  terraform_migrate_security_groups_v2.yml  terraform_plan.yml  terraform_plan_and_apply.yml
aws_backend_bootstrap/: README.md  output.tf  providers.tf  s3_backend_bootstrap.tf  terraform.tfstate  variables.tf
aws_deploy_infrastructure/: DAILY_TENDER_SCAN_SETUP.md  MANUAL_CLEANUP_STEPS.md  README.md  current_architecture.drawio  improved_architecture.drawio  lambdas.tf  lambdas_iam.tf  lambdas_s3.tf  nat.tf  outputs.tf  postgresql.tf  providers.tf  secrets.tf  security_groups.tf  ses.tf  sns.tf  sqs.tf  step_functions.tf  variables.tf  vpc_endpoints.tf
crates/ai_summary/: Cargo.toml  README.md
crates/ai_summary/src/: ai_service.rs  database.rs  main.rs  notification_service.rs  types.rs
crates/etenders_scraper/: Cargo.toml
crates/etenders_scraper/src/: main.rs
crates/get_data/: Cargo.toml
crates/get_data/src/: main.rs
crates/mdbook/: README.md  book.toml
crates/mdbook/src/: SUMMARY.md
crates/ml_bid_predictor/: Cargo.toml  README.md
crates/ml_bid_predictor/src/: database.rs  features.rs  main.rs  ml_predictor.rs  queue_handler.rs  types.rs
crates/pdf_processing/: Cargo.toml  codes.txt  test.txt
crates/pdf_processing/src/: lib.rs  main.rs
crates/pdf_processing/tests/: code_extraction_tests.rs  pdf_extraction_tests.rs
crates/postgres_dataload/: Cargo.toml  README.md
crates/postgres_dataload/src/: main.rs
crates/postgres_dataload/tests/: test_connection.rs
crates/sns_notification/: Cargo.toml  cargo.toml
crates/sns_notification/src/: email_service.rs  main.rs  types.rs
crates/sns_notification/templates/: email.hbs  email.txt
infrastructure/: output.tf  providers.tf  s3_backend.tf
mcp-server/: README.md  index-http.js  index.js  package-lock.json  package.json
mdbook/src/: 0_slide.md  1_introduction.md  1_slide.md  2_appendix.md  2_ml_and_ai_principals.md  2_ml_and_ai_principles.md  2_references.md  3_developing_ai_and_ml_apps.md  3_references.md  3_words.md  4_implementation_and_data_product_design.md  5_team_collaboration_and_communication.md  5_words.md  6_recommendations_and_conclusions.md  7_appendix.md  8_references.md  SUMMARY.md
python/: baseline_text_models.ipynb  baseline_text_models.py  comparison.ipynb  db_utils.py  db_utils_pdf_content.py  decision_tree_model.ipynb  enhanced_pdf_data_exploration.ipynb  etenders.ipynb  hybrid_text_model.ipynb  hybrid_text_model_main.ipynb  optimized_bid_predictor.py  prepare_data.py  prepare_data_pdf_content.py  requirements.txt  simplified_ml_predictor.py  tfidf_linearSVM.ipynb  tfidf_linearSVM_pdf_content.ipynb
