[package]
name = "ai_summary"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
aws_lambda_events = "0.15"
aws-config = "1.0"
aws-sdk-sqs = "1.0"
aws-sdk-sns = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal", "uuid"] }
tokio = { version = "1", features = ["macros"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anthropic-sdk = "0.1.5"

[[bin]]
name = "ai_summary"
path = "src/main.rs"
