[package]
name = "etenders_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.14.1"
reqwest = { version = "0.12.19", features = ["native-tls-vendored"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
openssl = { version = "0.10.73", features = ["vendored"] }
native-tls = { version = "0.2", features = ["vendored"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
regex = "1.10"
aws-config = "1.0"
aws-sdk-sqs = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "etenders_scraper"
path = "src/main.rs"
