[package]
name = "get_data"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = "0.14.1"
reqwest = { version = "0.12.19", features = ["native-tls-vendored"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
openssl = { version = "0.10.73", features = ["vendored"] }
native-tls = { version = "0.2", features = ["vendored"] }
# Local dependency for PDF processing utilities
pdf_processing = { path = "../pdf_processing" }
# AWS SDK for S3 access
aws-config = "1.0"
aws-sdk-s3 = "1.0" 