[package]
name = "ml_bid_predictor"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS and Lambda runtime
aws-config = "1.6.3"
aws_lambda_events = "0.15.0"
lambda_runtime = "0.14.1"
aws-sdk-sqs = "1.73.0"
aws-sdk-sns = "1.73.0"

# ML and Data Processing
smartcore = "0.3.2"  # Pure Rust ML library
nalgebra = "0.33.0"  # Linear algebra for feature vectors
regex = "1.10.0"     # Text processing

# Database
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono", "bigdecimal"] }

# OpenSSL and TLS with vendored features for cross-compilation
openssl = { version = "0.10.73", features = ["vendored"] }
native-tls = { version = "0.2", features = ["vendored"] }

# Serialization and async
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling and logging
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Text processing and feature extraction
ahash = "0.8.0"      # Fast hashing for text features
once_cell = "1.19.0" # For static initialization

# Optional: For debugging and development
[dev-dependencies]
tokio-test = "0.4"