[package]
name = "pdf_processing"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = "0.14.1"
pdf-extract = "0.9.0"
reqwest = "0.12.19"
scraper = "0.23.1"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "pdf_processing"
path = "src/main.rs"

[lib]
name = "pdf_processing"
path = "src/lib.rs"