[package]
name = "pdf_processing"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = { version = "0.14.1", default-features = false }
openssl = { version ="0.10.73", features = ["vendored"] }
pdf-extract = "0.9.0"
reqwest = "0.12.19"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
aws_lambda_events = "0.16.1"
serde_json = "1.0.140"
aws-sdk-sqs = "1.73.0"
aws-sdk-s3 = "1.96.0"
aws-config = "1.6.3"

[[bin]]
name = "pdf_processing"
path = "src/main.rs"

[lib]
name = "pdf_processing"
path = "src/lib.rs"
