[package]
name = "postgres_dataload"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.6.3"
aws-sdk-sfn = "1.76.0"
lambda_runtime = "0.14.1"
openssl = { version ="0.10.73", features = ["vendored"] }
reqwest = "0.12.19"
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = "1.45.1"
