[package]
name = "postgres_dataload"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.6.3"
lambda_runtime = "0.14.1"
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = { version = "0.12.19", features = ["native-tls-vendored"] }
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
native-tls = { version = "0.2", features = ["vendored"] }
aws-sdk-sqs = "1.73.0"
